# RINS

./: .gitignore  CMakeLists.txt  README.md  build.sh  useful_debugging_tips.md
ROS2/: frames_2025-04-29_13.49.51.gv
ROS2/install/: local_setup.sh  setup.sh
ROS2/install/dis_homework1/lib/dis_homework1/: custom_publisher.py  custom_server.py  custom_subscriber.py
ROS2/install/dis_homework1/share/dis_homework1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS2/install/dis_homework1/share/dis_homework1/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  dis_homework1Config-version.cmake  dis_homework1Config.cmake  dis_homework1__rosidl_typesupport_introspection_cExport.cmake  dis_homework1__rosidl_typesupport_introspection_cppExport-noconfig.cmake  dis_homework1__rosidl_typesupport_introspection_cppExport.cmake  export_dis_homework1__rosidl_generator_cExport-noconfig.cmake  export_dis_homework1__rosidl_generator_cppExport.cmake  export_dis_homework1__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_dis_homework1__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_dis_homework1__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ROS2/log/: latest_build
ROS2/src/dis_homework1/: CMakeLists.txt  useful_debugging_tips.txt
ROS2/src/dis_homework1/dis_homework1/: custom_client.py  custom_publisher.py  custom_server.py  custom_subscriber.py
ROS2/src/dis_homework1/msg/: CustomMessage.msg
ROS2/src/dis_homework1_2/scripts/: py_simple_publisher.py
ROS2/src/dis_homework2/: CMakeLists.txt  package.xml  useful_commands.txt
ROS2/src/dis_homework2/dis_homework2/: .go_to_position_simple_node.py.kate-swp  go_to_position_simple_node.py  move_service.py  move_service_old.py
ROS2/src/dis_homework2/srv/: MoveService.srv
ROS2/src/dis_homework3/: CMakeLists.txt  package.xml
ROS2/src/dis_homework3/launch/: sim_turtlebot_slam.launch.py
ROS2/src/dis_task1/: CMakeLists.txt  face_locations.txt  package.xml
ROS2/src/dis_task1/launch/: ignition.launch.py  localization.launch.py  nav2.launch.py  sim_turtlebot_nav.launch.py  sim_turtlebot_slam.launch.py
ROS2/src/dis_task1/msg/: MoverMessage.msg
ROS2/src/dis_task1/scripts/: detect_people.py  detect_rings.py  face_locator.py  generate_audio.py  mover.py  ring_locator.py  sweeper.py
ROS2/src/dis_task2/: CMakeLists.txt  debugging_tips.md  package.xml
ROS2/src/dis_task2/behavior_trees/: navigate_without_orientation.xml
ROS2/src/dis_task2/launch/: dis_sim.launch.py  nav2.launch.py  sim_turtlebot_slam.launch.py  slam.launch.py  turtlebot4_spawn.launch.py  turtlebot4_spawn_nav.launch.py
ROS2/src/dis_task2/maps/: map.pgm  map.yaml
ROS2/src/dis_task2/scripts/: detect_people.py  detect_rings.py  extract_color_from_pointcloud.py  face_locator.py  generate_audio.py  mover.py  sweeper.py
ROS2/src/dis_tutorial1/: homework1_answers.txt
(+59 files in other folders)
